Fixing search appearance on Safari

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -180,6 +180,7 @@
   text-align: center;
 
   input.search {
+    -webkit-appearance: none;
     font-family: inherit;
     text-align: center;
     width: 12em;
